--- a/academico/pom.xml
+++ b/academico/pom.xml
@@ -50,6 +50,11 @@
             <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.dropwizard</groupId>
+            <artifactId>dropwizard-client</artifactId>
+            <version>1.3.7</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
